--- a/ProjectLTWwarriors/Content/SignIn.css
+++ b/ProjectLTWwarriors/Content/SignIn.css
@@ -15,7 +15,6 @@ body {
     font-family: 'Be Vietnam Pro', sans-serif;
     background-color: var(--background-color);
     color: var(--text-color);
-    display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
@@ -74,6 +73,7 @@ body {
     padding: 14px;
     font-size: 16px;
     width: 100%;
+    max-width: 450px;
     box-sizing: border-box;
     outline: none;
     transition: border-color 0.2s, box-shadow 0.2s;
