--- a/ProjectLTWwarriors/Content/SignUp.css
+++ b/ProjectLTWwarriors/Content/SignUp.css
@@ -20,9 +20,8 @@
     border: 1px solid #D9D9D9;
     padding: 32px 40px;
     box-shadow: 0 0 5px rgba(0,0,0,0.05);
-    width: 350px;
-    height: 650px
-    
+    width: 500px;
+    height: 745px;
 }
 
 .Tieu_de {
