--- a/ProjectLTWwarriors/Views/Home/ThanhToan.cshtml
+++ b/ProjectLTWwarriors/Views/Home/ThanhToan.cshtml
@@ -29,7 +29,7 @@
                         <input type="text" placeholder="Tỉnh/Thành phố" class="tt-o-nhap" name="TinhThanh" required maxlength="30" />
                         <input type="text" placeholder="Phường/Xã" class="tt-o-nhap" name="PhuongXa" required maxlength="30" />
                         <input type="text" placeholder="Số nhà/Tên đường" class="tt-o-nhap" name="DiaChi" required maxlength="30" />
-                        <input type="text" placeholder="Ghi chú (nếu có)" class="tt-o-nhap" name="GhiChu" required maxlength="200" />
+                        <input type="text" placeholder="Ghi chú (nếu có)" class="tt-o-nhap" name="GhiChu" />
 
 
 
