--- a/ProjectLTWwarriors/Views/Home/ProductDetail.cshtml
+++ b/ProjectLTWwarriors/Views/Home/ProductDetail.cshtml
@@ -72,7 +72,7 @@
 
         <div class="cac-nut-hanh-dong">
 
-            <button class="nut nut-them-gio-hang" data-masp="@Model.Id">Thêm vào giỏ hàng</button>
+            <button class="nut nut-them-gio-hang" data-add-to-cart data-masp="@Model.Id" data-qty="1">Thêm vào giỏ hàng</button>
         </div>
 
         <div class="cac-nut-hanh-dong">
